--- a/src/AnyStatus/Features/ToolWindow/ToolWindowControl.xaml
+++ b/src/AnyStatus/Features/ToolWindow/ToolWindowControl.xaml
@@ -18,7 +18,13 @@
     <UserControl.Resources>
         <ResourceDictionary>
             <utilities:BrushToColorConverter x:Key="BrushToColorConverter"/>
+            <local:StateToBrushConverter x:Key="StateToBrushConverter" />
+            <local:TooltipConverter x:Key="TooltipConverter" />
+            <local:StateToImageConverter x:Key="StateToImageConverter" />
+            <local:HexToBrushConverter x:Key="HexToBrushConverter"/>
+            <local:IconConverter x:Key="IconConverter"/>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/AnyStatus;component/Resources/Styles.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/AnyStatus;component/Resources/Icons.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
@@ -68,12 +74,6 @@
             </TreeView.ContextMenu>
 
             <TreeView.Resources>
-
-                <local:StateToBrushConverter x:Key="StateToBrushConverter" />
-                <local:TooltipConverter x:Key="TooltipConverter" />
-                <local:StateToImageConverter x:Key="StateToImageConverter" />
-                <local:HexToBrushConverter x:Key="HexToBrushConverter"/>
-                <local:IconConverter x:Key="IconConverter"/>
 
                 <!-- Color Status Indicator-->
                 <Rectangle x:Key="ColoredStatusIndicator" x:Shared="False" Width="5" Fill="{Binding State.Metadata.Color, Converter={StaticResource HexToBrushConverter}}">
