--- a/src/AnyStatus/Features/ToolWindow/ToolWindowControl.xaml
+++ b/src/AnyStatus/Features/ToolWindow/ToolWindowControl.xaml
@@ -26,6 +26,8 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/AnyStatus;component/Resources/Styles.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/AnyStatus;component/Resources/Icons.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/AnyStatus;component/Features/ToolWindow/ItemContextMenu.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/AnyStatus;component/Features/ToolWindow/FolderContextMenu.xaml"/>
             </ResourceDictionary.MergedDictionaries>
             
         </ResourceDictionary>
@@ -113,95 +115,8 @@
                 <!--Folder-->
                 <HierarchicalDataTemplate DataType="{x:Type local:Folder}" ItemsSource="{Binding Items}">
                     <StackPanel Style="{StaticResource StatusPanelStyle}"
+                                ContextMenu="{StaticResource FolderContextMenu}"
                                 Tag="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type UserControl}}}">
-
-                        <StackPanel.ContextMenu>
-                            <ContextMenu>
-
-                                <MenuItem Header=" Refresh" 
-                                          Command="{Binding Path=PlacementTarget.Tag.DataContext.RefreshItemCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
-                                          CommandParameter="{Binding}">
-                                    <MenuItem.Icon>
-                                        <imaging:CrispImage Width="16" Height="16" Moniker="{x:Static catalog:KnownMonikers.Refresh}" />
-                                    </MenuItem.Icon>
-                                </MenuItem>
-
-                                <Separator />
-
-                                <MenuItem Header=" New Item..." 
-                                          Command="{Binding Path=PlacementTarget.Tag.DataContext.AddItemCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
-                                          CommandParameter="{Binding}">
-                                    <MenuItem.Icon>
-                                        <imaging:CrispImage Width="16" Height="16" Moniker="{x:Static catalog:KnownMonikers.NewItem}" />
-                                    </MenuItem.Icon>
-                                </MenuItem>
-
-                                <MenuItem Header=" New Folder" 
-                                          Command="{Binding Path=PlacementTarget.Tag.DataContext.AddFolderCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
-                                          CommandParameter="{Binding}">
-                                    <MenuItem.Icon>
-                                        <imaging:CrispImage Width="16" Height="16" Moniker="{x:Static catalog:KnownMonikers.AddFolder}" />
-                                    </MenuItem.Icon>
-                                </MenuItem>
-
-                                <Separator/>
-
-                                <MenuItem Header=" Enable" 
-                                          Command="{Binding Path=PlacementTarget.Tag.DataContext.EnableItemCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
-                                          CommandParameter="{Binding}">
-                                    <MenuItem.Icon>
-                                        <imaging:CrispImage Width="16" Height="16" Moniker="{x:Static catalog:KnownMonikers.Play}" />
-                                    </MenuItem.Icon>
-                                </MenuItem>
-
-                                <MenuItem Header=" Disable" 
-                                          Command="{Binding Path=PlacementTarget.Tag.DataContext.DisableItemCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
-                                          CommandParameter="{Binding}">
-                                    <MenuItem.Icon>
-                                        <imaging:CrispImage Width="16" Height="16" Moniker="{x:Static catalog:KnownMonikers.Stop}" />
-                                    </MenuItem.Icon>
-                                </MenuItem>
-
-                                <Separator/>
-
-                                <MenuItem Header=" Delete"
-                                          InputGestureText="Del"
-                                          Command="{Binding Path=PlacementTarget.Tag.DataContext.DeleteCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
-                                          CommandParameter="{Binding}">
-                                    <MenuItem.Icon>
-                                        <imaging:CrispImage Width="16" Height="16" Moniker="{x:Static catalog:KnownMonikers.DeleteFolder}" />
-                                    </MenuItem.Icon>
-                                </MenuItem>
-
-                                <MenuItem Header=" Rename"
-                                          InputGestureText="F2"
-                                          Command="{Binding Path=PlacementTarget.Tag.DataContext.RenameCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
-                                          CommandParameter="{Binding}">
-                                    <MenuItem.Icon>
-                                        <imaging:CrispImage Width="16" Height="16" Moniker="{x:Static catalog:KnownMonikers.Rename}" />
-                                    </MenuItem.Icon>
-                                </MenuItem>
-
-                                <Separator/>
-
-                                <MenuItem Header=" Move Up"
-                                          CommandParameter="{Binding}"
-                                          Command="{Binding Path=PlacementTarget.Tag.DataContext.MoveUpCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}">
-                                    <MenuItem.Icon>
-                                        <imaging:CrispImage Width="16" Height="16" Moniker="{x:Static catalog:KnownMonikers.MoveUp}" />
-                                    </MenuItem.Icon>
-                                </MenuItem>
-
-                                <MenuItem Header=" Move Down"
-                                          CommandParameter="{Binding}"
-                                          Command="{Binding Path=PlacementTarget.Tag.DataContext.MoveDownCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}">
-                                    <MenuItem.Icon>
-                                        <imaging:CrispImage Width="16" Height="16" Moniker="{x:Static catalog:KnownMonikers.MoveDown}" />
-                                    </MenuItem.Icon>
-                                </MenuItem>
-
-                            </ContextMenu>
-                        </StackPanel.ContextMenu>
 
                         <ContentControl Content="{StaticResource ColoredStatusIndicator}"/>
 
@@ -219,141 +134,14 @@
 
                 <!--Item-->
                 <DataTemplate DataType="{x:Type local:Item}">
+                    
                     <StackPanel Style="{StaticResource StatusPanelStyle}"
+                                ContextMenu="{StaticResource ItemContextMenu}"
                                 Tag="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type UserControl}}}">
 
                         <StackPanel.ToolTip>
                             <TextBlock Text="{Binding Converter={StaticResource TooltipConverter}}" />
                         </StackPanel.ToolTip>
-
-                        <StackPanel.ContextMenu>
-                            <ContextMenu>
-
-                                <MenuItem Header=" Refresh" 
-                                          Command="{Binding Path=PlacementTarget.Tag.DataContext.RefreshItemCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
-                                          CommandParameter="{Binding}">
-                                    <MenuItem.Style>
-                                        <Style TargetType="{x:Type MenuItem}">
-                                            <Setter Property="Visibility" Value="Collapsed"></Setter>
-                                            <Style.Triggers>
-                                                <DataTrigger Binding="{Binding Path=IsEnabled}" Value="True">
-                                                    <Setter Property="Visibility" Value="Visible"></Setter>
-                                                </DataTrigger>
-                                            </Style.Triggers>
-                                        </Style>
-                                    </MenuItem.Style>
-                                    <MenuItem.Icon>
-                                        <imaging:CrispImage Width="16" Height="16" Moniker="{x:Static catalog:KnownMonikers.Refresh}" />
-                                    </MenuItem.Icon>
-                                </MenuItem>
-
-                                <Separator>
-                                    <Separator.Style>
-                                        <Style TargetType="{x:Type Separator}">
-                                            <Setter Property="Visibility" Value="Collapsed"></Setter>
-                                            <Style.Triggers>
-                                                <DataTrigger Binding="{Binding Path=IsEnabled}" Value="True">
-                                                    <Setter Property="Visibility" Value="Visible"></Setter>
-                                                </DataTrigger>
-                                            </Style.Triggers>
-                                        </Style>
-                                    </Separator.Style>
-                                </Separator>
-
-                                <MenuItem Header=" Enable" 
-                                          Command="{Binding Path=PlacementTarget.Tag.DataContext.EnableItemCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
-                                          CommandParameter="{Binding}">
-                                    <MenuItem.Style>
-                                        <Style TargetType="{x:Type MenuItem}">
-                                            <Setter Property="Visibility" Value="Collapsed"></Setter>
-                                            <Style.Triggers>
-                                                <DataTrigger Binding="{Binding Path=IsEnabled}" Value="False">
-                                                    <Setter Property="Visibility" Value="Visible"></Setter>
-                                                </DataTrigger>
-                                            </Style.Triggers>
-                                        </Style>
-                                    </MenuItem.Style>
-                                    <MenuItem.Icon>
-                                        <imaging:CrispImage Width="16" Height="16" Moniker="{x:Static catalog:KnownMonikers.Play}" />
-                                    </MenuItem.Icon>
-                                </MenuItem>
-
-                                <MenuItem Header=" Disable" 
-                                          Command="{Binding Path=PlacementTarget.Tag.DataContext.DisableItemCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
-                                          CommandParameter="{Binding}">
-                                    <MenuItem.Style>
-                                        <Style TargetType="{x:Type MenuItem}">
-                                            <Setter Property="Visibility" Value="Collapsed"></Setter>
-                                            <Style.Triggers>
-                                                <DataTrigger Binding="{Binding Path=IsEnabled}" Value="True">
-                                                    <Setter Property="Visibility" Value="Visible"></Setter>
-                                                </DataTrigger>
-                                            </Style.Triggers>
-                                        </Style>
-                                    </MenuItem.Style>
-                                    <MenuItem.Icon>
-                                        <imaging:CrispImage Width="16" Height="16" Moniker="{x:Static catalog:KnownMonikers.Stop}" />
-                                    </MenuItem.Icon>
-                                </MenuItem>
-
-                                <Separator/>
-
-                                <MenuItem Header=" Delete" 
-                                          InputGestureText="Del"
-                                          Command="{Binding Path=PlacementTarget.Tag.DataContext.DeleteCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
-                                          CommandParameter="{Binding}">
-                                    <MenuItem.Icon>
-                                        <imaging:CrispImage Width="16" Height="16" Moniker="{x:Static catalog:KnownMonikers.Cancel}" />
-                                    </MenuItem.Icon>
-                                </MenuItem>
-
-                                <MenuItem Header=" Rename"
-                                          InputGestureText="F2"
-                                          Command="{Binding Path=PlacementTarget.Tag.DataContext.RenameCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
-                                          CommandParameter="{Binding}">
-                                    <MenuItem.Icon>
-                                        <imaging:CrispImage Width="16" Height="16" Moniker="{x:Static catalog:KnownMonikers.Rename}" />
-                                    </MenuItem.Icon>
-                                </MenuItem>
-
-                                <MenuItem Header=" Duplicate" 
-                                          Command="{Binding Path=PlacementTarget.Tag.DataContext.DuplicateCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
-                                          CommandParameter="{Binding}">
-                                    <MenuItem.Icon>
-                                        <imaging:CrispImage Width="16" Height="16" Moniker="{x:Static catalog:KnownMonikers.CopyItem}" />
-                                    </MenuItem.Icon>
-                                </MenuItem>
-
-                                <Separator/>
-
-                                <MenuItem Header=" Move Up"
-                                          CommandParameter="{Binding}"
-                                          Command="{Binding Path=PlacementTarget.Tag.DataContext.MoveUpCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}">
-                                    <MenuItem.Icon>
-                                        <imaging:CrispImage Width="16" Height="16" Moniker="{x:Static catalog:KnownMonikers.MoveUp}" />
-                                    </MenuItem.Icon>
-                                </MenuItem>
-
-                                <MenuItem Header=" Move Down"
-                                          CommandParameter="{Binding}"
-                                          Command="{Binding Path=PlacementTarget.Tag.DataContext.MoveDownCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}">
-                                    <MenuItem.Icon>
-                                        <imaging:CrispImage Width="16" Height="16" Moniker="{x:Static catalog:KnownMonikers.MoveDown}" />
-                                    </MenuItem.Icon>
-                                </MenuItem>
-
-                                <Separator/>
-
-                                <MenuItem Header=" Properties" 
-                                          Command="{Binding Path=PlacementTarget.Tag.DataContext.EditItemCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
-                                          CommandParameter="{Binding}">
-                                    <MenuItem.Icon>
-                                        <imaging:CrispImage Width="16" Height="16" Moniker="{x:Static catalog:KnownMonikers.Property}" />
-                                    </MenuItem.Icon>
-                                </MenuItem>
-
-                            </ContextMenu>
-                        </StackPanel.ContextMenu>
 
                         <ContentControl Content="{StaticResource ColoredStatusIndicator}"/>
 
@@ -364,8 +152,9 @@
                                                  VerticalAlignment="Center"
                                                  HorizontalAlignment="Stretch"
                                                  IsEditing="{Binding IsEditing}" 
-                                                 SaveCommand="{Binding DataContext.SaveCommand, ElementName=ToolWindow}">
-                            <local:EditableTextBlock.Style>
+                                                 SaveCommand="{Binding DataContext.SaveCommand, ElementName=ToolWindow}" />
+
+                        <!--<local:EditableTextBlock.Style>
                                 <Style TargetType="{x:Type local:EditableTextBlock}">
                                     <Style.Triggers>
                                         <DataTrigger Binding="{Binding Path=IsEnabled}" Value="False">
@@ -373,9 +162,7 @@
                                         </DataTrigger>
                                     </Style.Triggers>
                                 </Style>
-                            </local:EditableTextBlock.Style>
-                        </local:EditableTextBlock>
-
+                            </local:EditableTextBlock.Style>-->
                     </StackPanel>
                 </DataTemplate>
 
