--- a/src/AnyStatus/Features/ToolWindow/ToolWindowControl.xaml
+++ b/src/AnyStatus/Features/ToolWindow/ToolWindowControl.xaml
@@ -104,8 +104,8 @@
                             </Style.Triggers>
                         </Style>
                     </Grid.Style>
-                    <Rectangle Width="30" Height="30" Opacity="0.05" Fill="{DynamicResource {x:Static vsp:EnvironmentColors.ToolWindowButtonHoverActiveGlyphBrushKey}}" />
-                    <Rectangle Width="18" Height="18" Opacity="0.85" Fill="{DynamicResource {x:Static vsp:EnvironmentColors.ToolWindowButtonHoverActiveGlyphBrushKey}}">
+                    <Rectangle Width="30" Height="30" Opacity="0.04" Fill="{DynamicResource {x:Static vsp:EnvironmentColors.ToolWindowTextBrushKey}}" />
+                    <Rectangle Width="18" Height="18" Opacity="0.85" Fill="{DynamicResource {x:Static vsp:EnvironmentColors.ToolWindowTextBrushKey}}">
                         <Rectangle.OpacityMask>
                             <VisualBrush Stretch="Fill" Visual="{Binding State.Metadata.Icon, Converter={StaticResource IconConverter}}" />
                         </Rectangle.OpacityMask>
