--- a/src/AnyStatus/Resources/Styles.xaml
+++ b/src/AnyStatus/Resources/Styles.xaml
@@ -16,6 +16,17 @@
             </DataTrigger>
         </Style.Triggers>
         -->
+
+        <!--
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Opacity" Value="0.5" />
+            </Trigger>
+            <Trigger Property="IsMouseOver" Value="False">
+                <Setter Property="Opacity" Value="1" />
+            </Trigger>
+        </Style.Triggers>
+        -->
     </Style>
 
     <Style x:Key="TreeViewItemContainerStyle" TargetType="{x:Type TreeViewItem}">
