--- a/src/AnyStatus/Features/ToolWindow/ContextMenus/ItemContextMenu.xaml
+++ b/src/AnyStatus/Features/ToolWindow/ContextMenus/ItemContextMenu.xaml
@@ -149,7 +149,7 @@
 
         <MenuItem Header=" Move Down"
                                           CommandParameter="{Binding}"
-                                          Command="{Binding Path=PlacementTarget.Tag.DataContext.MoveDownCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}">
+                                          Command="{Binding Path=PlacementTarget.Tag.DataContext.MoveDownCEditCommandommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}">
             <MenuItem.Icon>
                 <imaging:CrispImage Width="16" Height="16" Moniker="{x:Static catalog:KnownMonikers.MoveDown}" />
             </MenuItem.Icon>
@@ -158,7 +158,7 @@
         <Separator/>
 
         <MenuItem Header=" Properties" 
-                                          Command="{Binding Path=PlacementTarget.Tag.DataContext.EditCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
+                                          Command="{Binding Path=PlacementTarget.Tag.DataContext.ShowEditDialogCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
                                           CommandParameter="{Binding}">
             <MenuItem.Icon>
                 <imaging:CrispImage Width="16" Height="16" Moniker="{x:Static catalog:KnownMonikers.Property}" />
