--- a/src/AnyStatus/Features/New/NewWindow.xaml
+++ b/src/AnyStatus/Features/New/NewWindow.xaml
@@ -74,7 +74,10 @@
         <DockPanel Grid.Column="2" Grid.Row="1">
             <Button DockPanel.Dock="Right" Command="{Binding CancelCommand}" Width="70" Margin="5">Cancel</Button>
             <Button DockPanel.Dock="Right" Command="{Binding AddCommand}" CommandParameter="{Binding SelectedTemplate.Item}" Width="70" Margin="5">Add</Button>
-            <Button DockPanel.Dock="Left" HorizontalAlignment="Left" Command="{Binding TestCommand}" CommandParameter="{Binding SelectedTemplate.Item}" Width="70" Margin="5">Test</Button>
+            <StackPanel Orientation="Horizontal" DockPanel.Dock="Left" HorizontalAlignment="Left">
+                <Button IsEnabled="{Binding CanTest}" Command="{Binding TestCommand}" CommandParameter="{Binding SelectedTemplate.Item}" Width="70" Margin="5">Test</Button>
+                <TextBlock Text="{Binding Message}" VerticalAlignment="Center" Margin="5" />
+            </StackPanel>
         </DockPanel>
     </Grid>
 </vsp:DialogWindow>
