--- a/src/AnyStatus/Features/ToolWindow/ToolWindowControl.xaml
+++ b/src/AnyStatus/Features/ToolWindow/ToolWindowControl.xaml
@@ -96,6 +96,10 @@
                                 ContextMenu="{StaticResource FolderContextMenu}"
                                 Tag="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type UserControl}}}">
 
+                        <StackPanel.ToolTip>
+                            <TextBlock Text="{Binding Converter={StaticResource TooltipConverter}}" />
+                        </StackPanel.ToolTip>
+                        
                         <ContentControl Content="{StaticResource ColoredStatusIndicator}"/>
 
                         <ContentControl Content="{StaticResource IconStatusIndicator}"/>
